# musenet-midi-py

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
musenet_midi_py/: __init__.py  main.py
test/: decoded.mid  decoded_yann.mid  encoded.txt  encoded2.txt  encoded_human.txt  encoded_human2.txt  test_musenet_midi.py
