[tool.poetry]
name = "musenet-midi-py"
version = "0.1.0"
description = "MuseNet Midi encoder and decoder"
authors = ["daanklijn <daanklijn0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mido = "^1.2.9"
pytest = "^6.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
